feat;Implements the range slider

--- a/main.html
+++ b/main.html
@@ -25,17 +25,14 @@
               src="./assets/icons/emptyCircel.svg"
             />
           </button>
-
           <button class="header-menu-submenu-button">
             <span class="header-menu-submenu-button-title">تب منو</span>
             <img src="./assets/icons/emptyCircel.svg" />
           </button>
-
           <button class="header-menu-submenu-button">
             <span class="header-menu-submenu-button-title">فرم ثبت نام </span>
             <img src="./assets/icons/emptyCircel.svg" />
           </button>
-
           <button class="header-menu-submenu-button">
             <span class="header-menu-submenu-button-title">رنج اسلایدر</span>
             <img src="./assets/icons/emptyCircel.svg" />
@@ -60,6 +57,109 @@
 
       <div class="header-details-arrow-icon">
         <img src="./assets/icons/arrowDown.svg" />
+      </div>
+    </div>
+
+    <!-- Range Slider -->
+    <div class="range-slider-container">
+      <div class="range-slider-container-top-section">
+        <div class="range-slider-container-top-section-english-title">
+          <span>Range Slider</span>
+        </div>
+        <div class="range-slider-container-top-section-persian-title">
+          <span>رنج اسلایدر</span>
+          <img src="./assets/icons/fillCircle.svg" />
+        </div>
+      </div>
+
+      <div class="range-slider-container-bottom-section">
+        <div class="range-slider-container-bottom-section-text">
+          <span>عدد</span>
+          <div class="range-slider-container-bottom-section-text-number">
+            20
+          </div>
+          <span>انتخاب شده</span>
+
+          <div class="range-slider-container-bottom-section-helper-section">
+            <img
+              class="range-slider-container-bottom-section-helper-section-question-image"
+              src="./assets/icons/question.svg"
+            />
+
+            <div class="range-slider-container-bottom-section-helper-text">
+              <div
+                class="range-slider-container-bottom-section-helper-text-top-section"
+              >
+                <img
+                  class="range-slider-container-bottom-section-helper-text-top-section-close-image"
+                  src="./assets/icons/closeDeepGreen.svg"
+                />
+                <span>متن راهنما</span>
+              </div>
+              <div
+                class="range-slider-container-bottom-section-helper-text-bottom-section"
+              >
+                <span
+                  >لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و
+                  با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه
+                  است</span
+                >
+              </div>
+              <div
+                class="range-slider-container-bottom-section-helper-text-bottom-section-arrow"
+              ></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="range-slider-container-bottom-section-slider-wrapper">
+          <div class="range-slider-container-bottom-section-slider-wrapper-bar">
+            <div
+              class="range-slider-container-bottom-section-slider-wrapper-text"
+            >
+              100
+            </div>
+            <div
+              class="range-slider-container-bottom-section-slider-wrapper-tracker-section"
+            >
+              <div
+                class="range-slider-container-bottom-section-slider-wrapper-tracker-section-thumb"
+              ></div>
+              <div
+                class="range-slider-container-bottom-section-slider-wrapper-tracker-section-bar"
+              ></div>
+            </div>
+            <div
+              class="range-slider-container-bottom-section-slider-wrapper-text"
+            >
+              10
+            </div>
+          </div>
+          <div
+            class="range-slider-container-bottom-section-slider-wrapper-separator-line"
+          >
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div
+            class="range-slider-container-bottom-section-slider-wrapper-ticks"
+          >
+            <span>90</span>
+            <span>80</span>
+            <span>70</span>
+            <span>60</span>
+            <span>50</span>
+            <span>40</span>
+            <span>30</span>
+            <span>20</span>
+          </div>
+        </div>
       </div>
     </div>
   </body>
