feat;Implements the slider

--- a/main.html
+++ b/main.html
@@ -162,6 +162,77 @@
         </div>
       </div>
     </div>
+
+    <!-- Slider -->
+    <div class="slider-container">
+      <div class="slider-container-top-section">
+        <div class="slider-container-top-section-english-title">
+          <span>Slider</span>
+        </div>
+        <div class="slider-container-top-section-persian-title">
+          <span>اسلایدر</span>
+          <img src="./assets/icons/fillCircle.svg" />
+        </div>
+      </div>
+
+      <div class="slider-container-bottom-section">
+        <div
+          class="slider-container-bottom-section-slider-image-container"
+          id="slider-track"
+        >
+          <div
+            class="slider-container-bottom-section-slider-image-container-slide"
+          >
+            <img src="./assets/img/Frame 7.png" />
+          </div>
+
+          <div
+            id="slider-container-bottom-section-slider-image-container-slide-7"
+            class="slider-container-bottom-section-slider-image-container-slide"
+          >
+            <img src="./assets/img/Frame 5.png" />
+          </div>
+
+          <div
+            id="slider-container-bottom-section-slider-image-container-slide-6"
+            class="slider-container-bottom-section-slider-image-container-slide"
+          >
+            <img src="./assets/img/Frame 6.png" />
+          </div>
+
+          <div
+            class="slider-container-bottom-section-slider-image-container-slide slider-container-bottom-section-slider-image-container-slide-last"
+          >
+            <img src="./assets/img/Frame 8.png" />
+          </div>
+        </div>
+        <div class="slider-container-bottom-section-buttons">
+          <div class="slider-container-bottom-section-buttons-arrow-left">
+            <img src="./assets/icons/arrowLeft.svg" />
+          </div>
+          <div class="slider-container-bottom-section-buttons-dot-container">
+            <span
+              class="slider-container-bottom-section-buttons-dot-container-single-dot"
+            ></span>
+            <span
+              class="slider-container-bottom-section-buttons-dot-container-single-dot"
+            ></span>
+            <span
+              class="slider-container-bottom-section-buttons-dot-container-single-dot"
+            ></span>
+            <span
+              class="slider-container-bottom-section-buttons-dot-container-single-dot"
+            ></span>
+            <span
+              class="slider-container-bottom-section-buttons-dot-container-single-dot"
+            ></span>
+          </div>
+          <div class="slider-container-bottom-section-buttons-arrow-right">
+            <img src="./assets/icons/arroeRight.svg" />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
   <!-- Script -->
   <script src="./script.js"></script>
