feat;Implements the top menu

--- a/main.html
+++ b/main.html
@@ -233,6 +233,238 @@
         </div>
       </div>
     </div>
+
+    <!-- Tab Menu -->
+    <div class="tab-menu-container">
+      <div class="tab-menu-container-top-section">
+        <div class="tab-menu-container-top-section-english-title">
+          <span>Tab Menu</span>
+        </div>
+        <div class="tab-menu-container-top-section-persian-title">
+          <span>تب منو</span>
+          <img src="./assets/icons/fillCircle.svg" />
+        </div>
+      </div>
+
+      <div class="tab-menu-container-bottom-section">
+        <div class="tab-menu-container-bottom-section-menu">
+          <div class="tab-menu-container-bottom-section-menu-item">
+            <span>منو شماره یک</span>
+            <img src="./assets/icons/flowerTulip.svg" />
+          </div>
+          <div class="tab-menu-container-bottom-section-menu-item">
+            <span>منو شماره دوم</span>
+            <img src="./assets/icons/football.svg" />
+          </div>
+          <div class="tab-menu-container-bottom-section-menu-item">
+            <span>منو شماره سوم</span>
+            <img src="./assets/icons/flag.svg" />
+          </div>
+          <div class="tab-menu-container-bottom-section-menu-item">
+            <span>منو شماره چهارم</span>
+            <img src="./assets/icons/feather.svg" />
+          </div>
+        </div>
+
+        <!-- Menu 1 -->
+        <div class="tab-menu-container-bottom-section-details-container">
+          <div
+            class="tab-menu-container-bottom-section-details-container-right-section"
+          >
+            <div
+              class="tab-menu-container-bottom-section-details-container-right-section-title-conatiner"
+            >
+              <div
+                class="tab-menu-container-bottom-section-details-container-right-section-title"
+              >
+                <span>منو شماره یک</span>
+                <div
+                  class="tab-menu-container-bottom-section-details-container-right-section-image"
+                >
+                  <img src="./assets/icons/flowerTulip2.svg" />
+                </div>
+              </div>
+
+              <div
+                class="tab-menu-container-bottom-section-details-container-right-section-text"
+              >
+                <span
+                  >لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و
+                  با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و
+                  مجله در ستون و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای
+                  متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در
+                  شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان
+                  را می طلبد.</span
+                >
+              </div>
+            </div>
+            <div
+              class="tab-menu-container-bottom-section-details-container-right-section-button"
+            >
+              <img src="./assets/icons/arrowLeft2.svg" />
+              <span>اطلاعات بیشتر</span>
+            </div>
+          </div>
+          <div
+            class="tab-menu-container-bottom-section-details-container-left-section"
+          >
+            <img src="./assets/img/Frame 32.png" />
+          </div>
+        </div>
+        <!-- Menu 2 -->
+        <div class="tab-menu-container-bottom-section-details-container">
+          <div
+            class="tab-menu-container-bottom-section-details-container-right-section"
+          >
+            <div
+              class="tab-menu-container-bottom-section-details-container-right-section-title-conatiner"
+            >
+              <div
+                class="tab-menu-container-bottom-section-details-container-right-section-title"
+              >
+                <span>منو شماره دوم</span>
+                <div
+                  class="tab-menu-container-bottom-section-details-container-right-section-image"
+                >
+                  <img src="./assets/icons/football2.svg" />
+                </div>
+              </div>
+
+              <div
+                class="tab-menu-container-bottom-section-details-container-right-section-text"
+              >
+                <span
+                  >لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و
+                  با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و
+                  مجله در ستون و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای
+                  متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در
+                  شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان
+                  را می طلبد.</span
+                >
+              </div>
+            </div>
+            <div
+              class="tab-menu-container-bottom-section-details-container-right-section-button"
+            >
+              <img src="./assets/icons/arrowLeft2.svg" />
+              <span>اطلاعات بیشتر</span>
+            </div>
+          </div>
+          <div
+            class="tab-menu-container-bottom-section-details-container-left-section"
+          >
+            <img src="./assets/img/Frame 33.png" />
+          </div>
+        </div>
+        <!-- Menu 3 -->
+        <div class="tab-menu-container-bottom-section-details-container">
+          <div
+            class="tab-menu-container-bottom-section-details-container-right-section"
+          >
+            <div
+              class="tab-menu-container-bottom-section-details-container-right-section-title-conatiner"
+            >
+              <div
+                class="tab-menu-container-bottom-section-details-container-right-section-title"
+              >
+                <span>منو شماره سوم</span>
+                <div
+                  class="tab-menu-container-bottom-section-details-container-right-section-image"
+                >
+                  <img src="./assets/icons/flag2.svg" />
+                </div>
+              </div>
+
+              <div
+                class="tab-menu-container-bottom-section-details-container-right-section-text"
+              >
+                <span
+                  >لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و
+                  با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و
+                  مجله در ستون و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای
+                  متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در
+                  شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان
+                  را می طلبد.</span
+                >
+              </div>
+            </div>
+            <div
+              class="tab-menu-container-bottom-section-details-container-right-section-button"
+            >
+              <img src="./assets/icons/arrowLeft2.svg" />
+              <span>اطلاعات بیشتر</span>
+            </div>
+          </div>
+          <div
+            class="tab-menu-container-bottom-section-details-container-left-section"
+          >
+            <img src="./assets/img/Frame 34.png" />
+          </div>
+        </div>
+        <!-- Menu 4 -->
+        <div class="tab-menu-container-bottom-section-details-container">
+          <div
+            class="tab-menu-container-bottom-section-details-container-right-section"
+          >
+            <div
+              class="tab-menu-container-bottom-section-details-container-right-section-title-conatiner"
+            >
+              <div
+                class="tab-menu-container-bottom-section-details-container-right-section-title"
+              >
+                <span>منو شماره چهارم</span>
+                <div
+                  class="tab-menu-container-bottom-section-details-container-right-section-image"
+                >
+                  <img src="./assets/icons/feather2.svg" />
+                </div>
+              </div>
+
+              <div
+                class="tab-menu-container-bottom-section-details-container-right-section-text"
+              >
+                <span
+                  >لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و
+                  با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و
+                  مجله در ستون و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای
+                  متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در
+                  شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان
+                  را می طلبد.</span
+                >
+              </div>
+            </div>
+            <div
+              class="tab-menu-container-bottom-section-details-container-right-section-button"
+            >
+              <img src="./assets/icons/arrowLeft2.svg" />
+              <span>اطلاعات بیشتر</span>
+            </div>
+          </div>
+          <div
+            class="tab-menu-container-bottom-section-details-container-left-section"
+          >
+            <img src="./assets/img/Frame 35.png" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Pop Up -->
+    <div id="overlay"></div>
+    <div class="pop-up-container">
+      <div class="pop-up-container-top-section">
+        <img
+          src="./assets/icons/closeDeepGreen.svg"
+          width="32"
+          height="32"
+          id="pop-up-close-button"
+        />
+        <span>پاپ آپ ویدیو</span>
+      </div>
+      <div class="pop-up-container-bottom-section">
+        <img src="./assets/img/popUpImage.png" />
+      </div>
+    </div>
   </body>
   <!-- Script -->
   <script src="./script.js"></script>
