feat;Adds menu animation

--- a/main.html
+++ b/main.html
@@ -440,23 +440,30 @@
           </div>
         </div>
 
-        <div class="singUp-form-container-bottom-section-cancellation-form">
+        <div
+          class="singUp-form-container-bottom-section-cancellation-form"
+          id="sadContainer"
+        >
           <div
             class="singUp-form-container-bottom-section-cancellation-form-icon"
+            id="sadIcon"
           >
             <img src="./assets/icons/smileySad.svg" />
           </div>
           <span
             class="singUp-form-container-bottom-section-cancellation-form-first-text"
+            id="cancellationFormFirstText"
             >مشکلی پیش آمده!</span
           >
           <span
             class="singUp-form-container-bottom-section-cancellation-form-second-text"
+            id="cancellationFormSecondText"
           >
             ثبت نام شما انجام نشد...
           </span>
           <div
             class="singUp-form-container-bottom-section-cancellation-form-buttons"
+            id="cancellationFormButton"
           >
             <span> بازگشت </span>
           </div>
