fix;Fixes the slider design issue

--- a/main.html
+++ b/main.html
@@ -85,6 +85,7 @@
       </div>
 
       <div class="slider-container-bottom-section">
+        <div class="slider-container-bottom-section-blur"></div>
         <div
           class="slider-container-bottom-section-slider-image-container"
           id="slider-track"
@@ -140,6 +141,7 @@
             <img src="./assets/icons/arroeRight.svg" />
           </div>
         </div>
+        <div class="slider-container-bottom-section-last-slide-blur"></div>
       </div>
     </div>
 
