chore;work in progress

--- a/main.html
+++ b/main.html
@@ -434,9 +434,25 @@
             class="singUp-form-container-bottom-section-details-image-line"
             src="./assets/img/line.png"
           />
-          <div class="singUp-form-container-bottom-section-details-dynamic">
-            <img src="./assets/img/better.png" />
+
+          <div
+            class="singUp-form-container-bottom-section-details-dynamic-container"
+          >
+            <div class="koft">
+              <div
+                class="singUp-form-container-bottom-section-details-dynamic-better"
+              >
+                <span id="better-text">Better</span>
+              </div>
+
+              <div
+                class="singUp-form-container-bottom-section-details-dynamic-easier"
+              >
+                <span id="easier-text">Easier</span>
+              </div>
+            </div>
           </div>
+
           <div class="singUp-form-container-bottom-section-details-circle">
             <img src="./assets/icons/smiley.svg" />
           </div>
