feat;Adds new animations

--- a/main.html
+++ b/main.html
@@ -184,7 +184,7 @@
             class="tab-menu-container-bottom-section-details-container-right-section"
           >
             <div
-              class="tab-menu-container-bottom-section-details-container-right-section-title-conatiner"
+              class="tab-menu-container-bottom-section-details-container-right-section-title-container"
             >
               <div
                 class="tab-menu-container-bottom-section-details-container-right-section-title"
@@ -229,7 +229,7 @@
             class="tab-menu-container-bottom-section-details-container-right-section"
           >
             <div
-              class="tab-menu-container-bottom-section-details-container-right-section-title-conatiner"
+              class="tab-menu-container-bottom-section-details-container-right-section-title-container"
             >
               <div
                 class="tab-menu-container-bottom-section-details-container-right-section-title"
@@ -274,7 +274,7 @@
             class="tab-menu-container-bottom-section-details-container-right-section"
           >
             <div
-              class="tab-menu-container-bottom-section-details-container-right-section-title-conatiner"
+              class="tab-menu-container-bottom-section-details-container-right-section-title-container"
             >
               <div
                 class="tab-menu-container-bottom-section-details-container-right-section-title"
@@ -319,7 +319,7 @@
             class="tab-menu-container-bottom-section-details-container-right-section"
           >
             <div
-              class="tab-menu-container-bottom-section-details-container-right-section-title-conatiner"
+              class="tab-menu-container-bottom-section-details-container-right-section-title-container"
             >
               <div
                 class="tab-menu-container-bottom-section-details-container-right-section-title"
@@ -374,7 +374,10 @@
       </div>
 
       <div class="singUp-form-container-bottom-section">
-        <div class="singUp-form-container-bottom-section-user-data">
+        <div
+          class="singUp-form-container-bottom-section-user-data"
+          id="singUp-form-container-bottom-section"
+        >
           <div
             class="singUp-form-container-bottom-section-user-data-information"
           >
@@ -438,17 +441,23 @@
           <div
             class="singUp-form-container-bottom-section-details-dynamic-container"
           >
-            <div class="koft">
-              <div
-                class="singUp-form-container-bottom-section-details-dynamic-better"
-              >
-                <span id="better-text">Better</span>
+            <div
+              id="signup-dynamic-text-container"
+              class="signup-dynamic-details-text-container"
+            >
+              <div>
+                <div
+                  class="singUp-form-container-bottom-section-details-dynamic-better"
+                >
+                  <span>Better</span>
+                </div>
               </div>
-
-              <div
-                class="singUp-form-container-bottom-section-details-dynamic-easier"
-              >
-                <span id="easier-text">Easier</span>
+              <div>
+                <div
+                  class="singUp-form-container-bottom-section-details-dynamic-easier"
+                >
+                  <span>Easier</span>
+                </div>
               </div>
             </div>
           </div>
